--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -100,6 +100,11 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 600px) {
+        justify-content: left;
+        padding-right: 32px;
+    }
 }
 
 .results {
@@ -118,7 +123,7 @@
 
 .btnFilter {
     height: 32px;
-    width: calc(50% - 10px);
+    width: calc(50% + 5px);
     padding: 8px 38px 8px 10px;
     position: relative;
     display: none;
