fixed Header for safari

--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -4,7 +4,7 @@
 @value greenBasic from '../../../../../css/colors.css';
 
 .header {
-    display: flex;
+    display: block;
     background-color: blackLight;
     flex-direction: column;
     font-family: RoundedElegance;
