--- a/src/apps/client/ui/components/Carousel/Carousel.css
+++ b/src/apps/client/ui/components/Carousel/Carousel.css
@@ -13,8 +13,10 @@
     width: 9999px;
     left: 0;
 
-    &:active {
-        cursor: grabbing;
+    @media (max-width: 1024px) {
+        &:active {
+            cursor: grabbing;
+        }
     }
 }
 
