--- a/src/apps/client/ui/components/Gallery/Gallery.css
+++ b/src/apps/client/ui/components/Gallery/Gallery.css
@@ -10,6 +10,7 @@
     background: whiteBasic;
     position: relative;
     z-index: 1;
+    user-select: none;
 
     @media (max-width: 1060px) {
         margin-right: 30px;
@@ -50,8 +51,10 @@
     flex-shrink: 0;
     overflow: hidden;
 
-    &:active {
-        cursor: grabbing;
+    @media (max-width: 1024px) {
+        &:active {
+            cursor: grabbing;
+        }
     }
 }
 
