fixed search bug

--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -18,15 +18,17 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    background-image: url('./img/wishlist.svg');
+    background-image: url('./img/wishlist.png');
     background-repeat: no-repeat;
     width: 18px;
     height: 16px;
     transition: .3s ease-out;
 
-    &:hover {
-        background-image: url('./img/wishlist-hover.svg');
-        background-repeat: no-repeat;
+    @media (min-width: 600px) {
+        &:hover {
+            background-image: url('./img/wishlist-hover.svg');
+            background-repeat: no-repeat;
+        }
     }
 }
 
