--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -13,11 +13,10 @@
     padding: 0 16px;
     background: gray3;
     width: 100%;
-    margin-top: -40px;
+    border-bottom: 1px solid whiteBasic;
 
     @media (max-width: 1210px) {
         border-top: 1px solid white;
-        margin: 0;
     }
 
     @media (max-width: 600px) {
