--- a/src/apps/client/ui/components/Comments/Comments.css
+++ b/src/apps/client/ui/components/Comments/Comments.css
@@ -7,17 +7,44 @@
 
 .commentsContainer {
     font-family: RoundedElegance;
+    max-width: 1700px;
     display: flex;
+    justify-content: space-between;
 
+    @media  (--media-desktop-s){
+        padding: 0 58px;
+    }
+    @media  (--media-desktop-m){
+        padding: 0 128px;
+    }
+    @media  (--media-desktop-l){
+        padding: 0 228px;
+    }
     @media (max-width: 850px) {
         flex-direction: column;
-        align-items: center;
+        padding: 0;
     }
 }
 
 .comments {
     max-width: 620px;
     margin-right: 50px;
+
+    @media (max-width: 850px) {
+        max-width: 100%;
+        margin-right: 0;
+    }
+}
+
+.hiddenComments{
+    overflow: hidden;
+    max-height: 0;
+    transition: 0.2s ease-out;
+
+    &.active {
+         max-height: 10000px;
+         transition: 0.2s ease-in;
+    }
 }
 
 .comment {
@@ -26,11 +53,47 @@
 
     &:after {
         position: absolute;
+        left: 0;
         content: '';
         background-color: rgba(216, 216, 216, 0.5);
-        max-width: 580px;
         width: 100%;
         height: 1px;
+    }
+
+    @media  (--media-tablet-l){
+        width: 325px;
+
+        &:after {
+             max-width: 305px;
+         }
+    }
+    @media  (--media-desktop-s){
+        width: 400px;
+
+        &:after {
+             max-width: 350px;
+         }
+    }
+    @media  (--media-desktop-m){
+        width: 520px;
+
+        &:after {
+             max-width: 470px;
+        }
+    }
+    @media  (--media-desktop-l){
+        width: 620px;
+
+        &:after {
+             max-width: 580px;
+         }
+    }
+    @media (max-width: 850px) {
+        width: 100%;
+
+        &:after {
+             max-width: 100%;
+         }
     }
 }
 
@@ -51,6 +114,7 @@
 
     @media (max-width: 600px) {
         margin-bottom: 10px;
+        font-size: 16px;
     }
 }
 
@@ -63,7 +127,7 @@
     }
 }
 
-.star {
+.star, .emptyStar {
     width: 14px;
     height: 14px;
     background: url('./img/rating-yellow.png') no-repeat center;
@@ -73,6 +137,10 @@
     &:last-child {
         margin-right: 0;
     }
+}
+
+.emptyStar{
+    background-image: url('./img/rating-gray.png');
 }
 
 .date {
@@ -92,6 +160,11 @@
     line-height: 18px;
     color: rgba(35, 35, 35, 0.7);
     margin-bottom: 15px;
+
+    @media (max-width: 600px) {
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
 
 .showAll {
@@ -117,11 +190,6 @@
             margin-right: 15px;
         }
     }
-}
-
-.commentsForm {
-    max-width: 403px;
-    width: 100%;
 }
 
 .feedbackTitle {
@@ -162,13 +230,28 @@
     }
 }
 
+.firstFeedbackTitle{
+    text-decoration-line: none;
+
+    &:after {
+        display: none;
+     }
+}
+
 .form {
-    margin-top: 30px;
-    display: none;
-    transition: 0.5s ease-out;
+    overflow: hidden;
+    width: 403px;
+    max-height: 0;
+    transition: 0.2s ease-out;
 
     &.active {
-        display: block;
+         margin-top: 30px;
+         max-height: 400px;
+         transition: max-height 0.2s ease-in;
+    }
+
+    @media (max-width: 850px) {
+        width: 100%;
     }
 }
 
@@ -233,14 +316,26 @@
     resize: none;
 }
 
-.feedbackBtn,
-.cancelBtn {
+.formButtonsWrapper{
+    display: flex;
+
+    @media (max-width: 600px) {
+        justify-content: space-between;
+    }
+}
+
+.feedbackBtn, .cancelBtn {
     @mixin removeDefaultButton;
-    padding: 10px 20px;
     font-family: RoundedElegance;
     font-size: 18px;
+    padding: 10px 20px;
     line-height: 21px;
     cursor: pointer;
+
+    @media (max-width: 340px) {
+        font-size: 16px;
+        padding: 8px 16px;
+    }
 }
 
 .feedbackBtn {
