replacement of png images for svg

--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    background-image: url('./img/wishlist.png');
+    background-image: url('./img/wishlist.svg');
     background-repeat: no-repeat;
     width: 18px;
     height: 16px;
