--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -70,6 +70,7 @@
 }
 
 .menuTop {
+    white-space: nowrap;
     @media (max-width: 991px) {
         display: none;
     }
@@ -200,12 +201,12 @@
     padding: 0;
     position: absolute;
     top: 0;
-    background: center no-repeat url('./img/search.png');
+    background: center no-repeat url('./img/search.svg');
     cursor: pointer;
     transition: .3s ease-out;
 
     &:hover {
-        background-image: url('./img/search-hover.png');
+        background-image: url('./img/search-hover.svg');
     }
 }
 
@@ -325,7 +326,7 @@
     height: 18px;
     position: absolute;
     top: 0;
-    background: center no-repeat url('./img/searchBottom.png');
+    background: center no-repeat url('./img/searchBottom.svg');
     margin-left: 17px;
 }
 
