--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -54,6 +54,19 @@
     color: redBasic;
 }
 
+.properties {
+    display: flex;
+
+    @media (max-width: 500px) {
+        flex-direction: column;
+        margin: 10px 0 40px 0;
+    }
+}
+
+.sizesWrap {
+
+}
+
 .sizesTitle {
     font: 16px/18px RoundedElegance;
     color: blackLighter;
@@ -64,6 +77,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    max-width: 202px;
 
     &.active .option {
         display: block;
@@ -137,6 +151,80 @@
     position: absolute;
     width: 100%;
     z-index: 1;
+}
+
+.colorWrap {
+    margin-left: 100px;
+    position: relative;
+
+    &.active {
+        .activeColor{
+            border-bottom: none;
+
+            &:before{
+                transform: rotate(180deg);
+                border-color: blackLight transparent transparent transparent;
+            }
+        }
+        .colorList {
+            display: block;
+        }
+    }
+
+    @media (max-width: 500px) {
+        margin: 15px 0 0 0;
+    }
+}
+
+.colorTitle {
+    font: 16px/18px RoundedElegance;
+    color: blackLighter;
+    margin-bottom: 6px;
+}
+
+.color {
+    width: 121px;
+    height: 28px;
+    box-sizing: content-box;
+    list-style: none;
+    margin-top: 10px;
+}
+.activeColor {
+    border: 1px solid gray0;
+    position: relative;
+    margin-top: 0;
+
+    &:before {
+         content: "";
+         width: 0;
+         height: 0;
+         border-style: solid;
+         border-width: 8px 5px 0 5px;
+         border-color: greenBasic transparent transparent transparent;
+         position: absolute;
+         top: 50%;
+         right: 10px;
+         margin-top: -5px;
+         transition: 0.25s ease-out;
+         transition-property: transform, border-color;
+    }
+}
+
+.colorImg {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.colorList {
+    border: 1px solid gray0;
+    border-top: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: gray3;
+    z-index: 1;
+    display: none;
 }
 
 .buttons {
