--- a/src/apps/client/ui/components/CartProduct/CartProduct.css
+++ b/src/apps/client/ui/components/CartProduct/CartProduct.css
@@ -125,6 +125,15 @@
     background-repeat: no-repeat;
 }
 
+.properties {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 500px) {
+        flex-direction: column;
+    }
+}
+
 .productSize {
     font-size: 14px;
     line-height: 16px;
@@ -134,7 +143,36 @@
     @media (max-width: 500px) {
         font-size: 13px;
         line-height: 15px;
+        margin-bottom: 10px;
     }
+}
+
+.productColor {
+    @media (max-width: 500px) {
+        display: flex;
+        margin-bottom: 12px;
+        font-size: 13px;
+        line-height: 15px;
+    }
+}
+
+.productColorImgWrap {
+    width: 69px;
+    height: 22px;
+    overflow: hidden;
+    margin: 7px 0 -25px 0;
+    border: gray0;
+
+    @media (max-width: 500px) {
+        width: 54px;
+        height: 15px;
+        margin: 0 0 0 26px;
+    }
+}
+
+.productColorImg {
+    width: 100%;
+    height: auto;
 }
 
 .productQuantity {
