--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -177,6 +177,38 @@
     }
 }
 
+.productColor {
+    font-size: 14px;
+    line-height: 16px;
+    color: blackLight;
+    margin-bottom: 17px;
+    display: flex;
+
+    @media (max-width: 500px) {
+        font-size: 13px;
+        line-height: 15px;
+    }
+}
+
+.productColorImgWrap {
+    width: 69px;
+    height: 22px;
+    overflow: hidden;
+    border: gray0;
+    margin: -4px 0 0px 26px;
+
+    @media (max-width: 500px) {
+        width: 54px;
+        height: 15px;
+        margin-left: 0;
+    }
+}
+
+.productColorImg {
+    width: 100%;
+    height: auto;
+}
+
 .productPrices {
     display: flex;
     align-items: center;
