--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -159,8 +159,6 @@
 
     &.active {
         .activeColor{
-            border-bottom: none;
-
             &:before{
                 transform: rotate(180deg);
                 border-color: blackLight transparent transparent transparent;
@@ -188,6 +186,15 @@
     box-sizing: content-box;
     list-style: none;
     margin-top: 10px;
+    position: relative;
+
+
+
+    &:hover {
+        .view {
+            display: flex;
+        }
+    }
 }
 .activeColor {
     border: 1px solid gray0;
@@ -208,6 +215,10 @@
          transition: 0.25s ease-out;
          transition-property: transform, border-color;
     }
+
+    .view {
+        display: flex;
+    }
 }
 
 .colorImg {
@@ -216,11 +227,28 @@
     cursor: pointer;
 }
 
+.view {
+    width: 50px;
+    height: 100%;
+    position: absolute;
+    left: calc(100% + 1px);
+    top: 0;
+    background: gray3;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    display: none;
+
+    &:before {
+        content: url('./img/view.svg');
+    }
+}
+
 .colorList {
     border: 1px solid gray0;
     border-top: none;
     position: absolute;
-    top: 100%;
+    top: calc(100% - 1px);
     left: 0;
     background: gray3;
     z-index: 1;
