new selects logic

--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -221,6 +221,12 @@
     }
 }
 
+.oneActiveColor {
+    &:before {
+        display: none;
+    }
+}
+
 .colorImg {
     width: 100%;
     height: 100%;
