--- a/src/apps/client/ui/components/Filters/Filters.css
+++ b/src/apps/client/ui/components/Filters/Filters.css
@@ -9,5 +9,15 @@
 
     @media (max-width: 600px) {
         display: none;
+        flex-direction: column;
+        width: 100%;
+
+        &.mobile {
+            display: flex;
+        }
     }
+}
+
+.mobile {
+    display: none;
 }
