--- a/src/apps/client/ui/components/FilterCheckBox/FilterCheckBox.css
+++ b/src/apps/client/ui/components/FilterCheckBox/FilterCheckBox.css
@@ -2,6 +2,7 @@
 @value blackLight from '../../../../../css/colors.css';
 @value greenBasic from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
+@value gray7 from '../../../../../css/colors.css';
 
 .filter {
     &.active {
@@ -21,6 +22,28 @@
             z-index: 1;
             max-height: 500px;
             transition: max-height 0.25s ease-in;
+        }
+    }
+
+    @media (max-width: 600px) {
+        position: relative;
+        padding: 15px 0;
+
+        &:before {
+            content: '';
+            position: absolute;
+            left: -16px;
+            bottom: 0;
+            width: calc(100% + 32px);
+            height: 1px;
+            background: rgba(216, 216, 216, 0.5);
+        }
+
+        &.active {
+            .title {
+                background: none;
+                color: blackLight;
+            }
         }
     }
 }
@@ -50,6 +73,35 @@
         transition: 0.25s ease-in;
         transition-property: transform, border-color;
     }
+
+     @media (max-width: 600px) {
+        padding: 0 34px 0 0;
+        width: 100%;
+        font-size: 18px;
+        line-height: 21px;
+
+        &:before {
+            content: url("./img/down.svg");
+             margin-top: -12px;
+             right: 0;
+             border: none;
+             width: auto;
+             height: auto;
+        }
+     }
+}
+
+.activeValue {
+    font: 14px/16px RoundedElegance;;
+    color: gray7;
+
+    @media (min-width: 601px) {
+        display: none;
+    }
+}
+
+.activeValueText {
+    padding-top: 11px;
 }
 
 .options {
@@ -61,6 +113,15 @@
     transition: max-height 0.25s ease-out;
     background: greenBasic;
     min-width: 242px;
+
+    @media (max-width: 600px) {
+        position: relative;
+        padding: 0;
+        width: calc(100% + 32px);
+        top: 0;
+        left: -16px;
+        background: none;
+    }
 }
 
 .option {
@@ -70,6 +131,24 @@
     display: block;
     position: relative;
     cursor: pointer;
+
+    @media (max-width: 600px) {
+        padding: 10px 16px 10px 56px;
+        background: greenBasic;
+
+        &:first-child {
+            padding-top: 20px;
+             margin-top: 15px;
+
+            .circle {
+                top: 18px;
+            }
+         }
+
+        &:last-child {
+             padding-bottom: 20px;
+         }
+    }
 }
 
 .input {
@@ -110,5 +189,18 @@
         transition: background 0.25s ease-in;
         background: whiteBasic;
         border-radius: 50%;
+    }
+
+    @media (max-width: 600px) {
+        width: 20px;
+        height: 20px;
+        left: 16px;
+
+        &:before {
+            width: 12px;
+            height: 12px;
+            margin-top: -6px;
+            margin-left: -6px;
+         }
     }
 }
