--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -63,10 +63,6 @@
     }
 }
 
-.sizesWrap {
-
-}
-
 .sizesTitle {
     font: 16px/18px RoundedElegance;
     color: blackLighter;
@@ -225,6 +221,63 @@
     background: gray3;
     z-index: 1;
     display: none;
+}
+
+.features {
+    margin-top: 22px;
+}
+
+.feature {
+    display: block;
+    font: 16px/18px RoundedElegance;
+    color: #232323;
+    margin-top: 10px;
+    padding-left: 28px;
+    position: relative;
+    cursor: pointer;
+}
+
+.featureInput {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 0;
+
+    &:checked {
+        + .featureCheckmark {
+            &:before {
+                background: greenBasic;
+            }
+        }
+    }
+}
+
+.featureValue {
+    color: redBasic;
+}
+
+.featureCheckmark {
+    position: absolute;
+    left: 0;
+    top: 2px;
+    width: 16px;
+    height: 16px;
+    background: gray3;
+    border: 1px solid #25716C;
+
+    &:before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 10px;
+        height: 10px;
+        margin-top: -5px;
+        margin-left: -5px;
+        transition: background 0.25s ease-in;
+    }
 }
 
 .buttons {
