--- a/src/apps/client/ui/components/FilterSlider/FilterSlider.css
+++ b/src/apps/client/ui/components/FilterSlider/FilterSlider.css
@@ -91,7 +91,7 @@
 }
 
 .activeValue {
-    font: 14px/16px RoundedElegance;;
+    font: 14px/16px RoundedElegance;
     color: gray7;
 
     @media (min-width: 601px) {
