--- a/src/apps/client/ui/components/Advantages/Advantages.css
+++ b/src/apps/client/ui/components/Advantages/Advantages.css
@@ -157,6 +157,7 @@
     text-align: justify;
     font-feature-settings: "kern" off;
     color: blackLight;
+    width: 100%;
     margin-top: 30px;
 
     @media (max-width: 600px) {
