--- a/src/apps/client/ui/components/Breadcrumbs/Breadcrumbs.css
+++ b/src/apps/client/ui/components/Breadcrumbs/Breadcrumbs.css
@@ -17,7 +17,7 @@
 }
 
 .breadcrumb {
-  font: 14px/28px RoundedElegance;
+  font: 14px/28px GilroyRegular;
   color: blackLight;
   text-decoration: none;
   white-space: nowrap;
