--- a/src/apps/client/ui/components/Carousel/Carousel.css
+++ b/src/apps/client/ui/components/Carousel/Carousel.css
@@ -122,7 +122,7 @@
 }
 
 .text {
-    font: 36px/41px RoundedElegance;
+    font: 36px/41px GilroyRegular;
     color: blackLight;
     padding: 10px;
     background: rgba(255, 255, 255, 0.8);
