--- a/src/apps/client/ui/components/Footer/Footer.css
+++ b/src/apps/client/ui/components/Footer/Footer.css
@@ -140,7 +140,7 @@
 }
 
 .contactsLink {
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     text-decoration: none;
     font-size: 14px;
     line-height: 16px;
