--- a/src/apps/client/ui/components/MainCategories/MainCategories.css
+++ b/src/apps/client/ui/components/MainCategories/MainCategories.css
@@ -49,7 +49,7 @@
 }
 
 .title {
-    font: 24px/28px RoundedElegance;
+    font: 24px/28px GilroyRegular;
     color: blackLight;
     position: absolute;
     left: 0;
