--- a/src/apps/client/ui/components/Pagination/Pagination.css
+++ b/src/apps/client/ui/components/Pagination/Pagination.css
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: center;
     color: blackLight;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 18px;
     line-height: 21px;
 
