--- a/src/apps/client/ui/components/ProductSort/ProductSort.css
+++ b/src/apps/client/ui/components/ProductSort/ProductSort.css
@@ -18,7 +18,7 @@
     padding: 6px 41px 6px 16px;
     background: gray4;
     box-sizing: border-box;
-    font: 300 14px/17px RoundedElegance;
+    font: 300 14px/17px GilroyRegular;
     color: blackLight;
     cursor: pointer;
     overflow: hidden;
