--- a/src/apps/client/ui/components/ReviewSent/ReviewSent.css
+++ b/src/apps/client/ui/components/ReviewSent/ReviewSent.css
@@ -1,6 +1,6 @@
 .wrapper{
     padding: 159px 0;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     text-align: center;
 
     @media (max-width: 850px) {
