--- a/src/apps/client/ui/pages/MainPage/MainPage.css
+++ b/src/apps/client/ui/pages/MainPage/MainPage.css
@@ -26,7 +26,7 @@
 }
 
 .title {
-    font: 36px/41px RoundedElegance;
+    font: 36px/41px GilroyRegular;
     text-align: center;
     color: blackLight;
     margin: 0 auto;
