--- a/src/apps/client/ui/components/Advantages/Advantages.css
+++ b/src/apps/client/ui/components/Advantages/Advantages.css
@@ -26,7 +26,7 @@
 }
 
 .title {
-    font: 34px/41px RoundedElegance;
+    font: 34px/41px GilroyRegular;
     color: blackBasic;
     text-align: center;
     position: relative;
@@ -125,7 +125,7 @@
 }
 
 .advantageTitle {
-    font: 24px/28px RoundedElegance;
+    font: 24px/28px GilroyRegular;
     letter-spacing: 0.03em;
     font-feature-settings: "kern" off;
     color: blackLight;
@@ -152,7 +152,7 @@
 }
 
 .advantageText {
-    font: 16px/18px RoundedElegance;
+    font: 16px/24px GilroyRegular;
     letter-spacing: 0.03em;
     text-align: justify;
     font-feature-settings: "kern" off;
@@ -162,7 +162,7 @@
 
     @media (max-width: 600px) {
         font-size: 14px;
-        line-height: 16px;
+        line-height: 21px;
         margin-top: 20px;
     }
 }
