--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -113,7 +113,7 @@
 }
 
 .label {
-    font: 18px/21px RoundedElegance;
+    font: 18px/21px GilroyRegular;
     padding: 0 18px;
     background: greenBasic;
     color: whiteBasic;
@@ -148,7 +148,7 @@
 }
 
 .productName {
-    font: 18px/21px RoundedElegance;
+    font: 18px/21px GilroyRegular;
     color: blackLight;
     padding: 5px 10px;
     text-align: center;
@@ -168,7 +168,7 @@
 }
 
 .price {
-    font: 18px/21px RoundedElegance;
+    font: 18px/21px GilroyRegular;
     color: blackLight;
     margin-bottom: 15px;
     text-align: center;
@@ -185,7 +185,7 @@
 }
 
 .priceOld {
-    font: 15px/17px RoundedElegance;
+    font: 15px/17px GilroyRegular;
     text-decoration-line: line-through;
     color: gray0;
     position: absolute;
