--- a/src/apps/client/ui/components/Cart/Cart.css
+++ b/src/apps/client/ui/components/Cart/Cart.css
@@ -73,7 +73,7 @@
     position: absolute;
     top: 0;
     right: 60px;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,7 +114,7 @@
     margin-top: 20px;
     background-color: blackLight;
     cursor: pointer;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 18px;
     line-height: 21px;
     color: whiteBasic;
@@ -129,7 +129,7 @@
 .continueShopping {
     @mixin removeDefaultButton;
     padding: 0;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 18px;
     line-height: 21px;
     margin: 20px 0;
