--- a/src/apps/client/ui/components/CartProduct/CartProduct.css
+++ b/src/apps/client/ui/components/CartProduct/CartProduct.css
@@ -199,7 +199,7 @@
     padding: 0 5px;
     position: absolute;
     color: gray0;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 18px;
     line-height: 21px;
     height: 100%;
@@ -233,7 +233,7 @@
     position: absolute;
     top: 5px;
     left: 30px;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 18px;
     color: blackLight;
 
