--- a/src/apps/client/ui/components/FilterCheckBox/FilterCheckBox.css
+++ b/src/apps/client/ui/components/FilterCheckBox/FilterCheckBox.css
@@ -50,7 +50,7 @@
 
 .title {
     box-sizing: border-box;
-    font: 300 14px/16px RoundedElegance;
+    font: 300 14px/16px GilroyRegular;
     color: blackLight;
     padding: 17px 45px 17px 25px;
     position: relative;
@@ -92,7 +92,7 @@
 }
 
 .activeValue {
-    font: 14px/16px RoundedElegance;
+    font: 14px/16px GilroyRegular;
     color: gray7;
 
     @media (min-width: 601px) {
@@ -125,7 +125,7 @@
 }
 
 .option {
-    font: 14px/16px RoundedElegance;
+    font: 14px/16px GilroyRegular;
     color: whiteBasic;
     padding: 9px 30px;
     display: block;
