--- a/src/apps/client/ui/components/FilterSlider/FilterSlider.css
+++ b/src/apps/client/ui/components/FilterSlider/FilterSlider.css
@@ -49,7 +49,7 @@
 
 .title {
     box-sizing: border-box;
-    font: 300 14px/16px RoundedElegance;
+    font: 300 14px/16px GilroyRegular;
     color: blackLight;
     padding: 17px 45px 17px 25px;
     position: relative;
@@ -91,7 +91,7 @@
 }
 
 .activeValue {
-    font: 14px/16px RoundedElegance;
+    font: 14px/16px GilroyRegular;
     color: gray7;
 
     @media (min-width: 601px) {
@@ -217,7 +217,7 @@
     border: 1px solid whiteBasic;
     border-radius: 2px;
     background-color: greenBasic;
-    font: 14px/16px RoundedElegance;
+    font: 14px/16px GilroyRegular;
     color: whiteBasic;
     position: relative;
     z-index: 1;
