--- a/src/apps/client/ui/components/Gallery/Gallery.css
+++ b/src/apps/client/ui/components/Gallery/Gallery.css
@@ -33,7 +33,7 @@
     padding: 4px 10px;
     top: 6px;
     right: 0;
-    font: 18px/21px RoundedElegance;
+    font: 18px/21px GilroyRegular;
     color: whiteBasic;
     background: redBasic;
     z-index: 1;
