--- a/src/apps/client/ui/components/LangSwitch/LangSwitch.css
+++ b/src/apps/client/ui/components/LangSwitch/LangSwitch.css
@@ -25,7 +25,7 @@
 
 .lang {
     color: whiteBasic;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 16px;
     line-height: 18px;
     cursor: pointer;
