--- a/src/apps/client/ui/components/PopupColor/PopupColor.css
+++ b/src/apps/client/ui/components/PopupColor/PopupColor.css
@@ -35,7 +35,7 @@
     padding: 20px;
     width: 812px;
     z-index: 100;
-    font: 18px/21px RoundedElegance;
+    font: 18px/21px GilroyRegular;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,7 +56,7 @@
 }
 
 .title {
-    font: 24px/28px RoundedElegance;
+    font: 24px/28px GilroyRegular;
     margin: 0 20px 13px 20px;
     color: #232323;
     padding-bottom: 7px;
