--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -73,7 +73,7 @@
     position: absolute;
     top: 0;
     right: 60px;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -271,7 +271,7 @@
 }
 
 .cartBtn {
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 16px;
     line-height: 18px;
     color: whiteBasic;
@@ -322,7 +322,7 @@
 .continueShopping {
     @mixin removeDefaultButton;
     padding: 0;
-    font-family: RoundedElegance;
+    font-family: GilroyRegular;
     font-size: 18px;
     line-height: 21px;
     margin: 20px 0;
