--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -9,8 +9,8 @@
 }
 
 @font-face {
-  font-family: 'RoundedElegance';
-  src: url('./font/RoundedElegance.ttf') format('truetype');
+  font-family: 'GilroyRegular';
+  src: url('./font/Gilroy-Regular.ttf') format('truetype');
 }
 
 @font-face {
