заменила png стрелочку на svg в хедере

--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -459,7 +459,7 @@
     &:after {
         position: absolute;
         content: '';
-        background: url('./img/menuItemArrow.png') center no-repeat;
+        background: url('./img/menuItemArrow.svg') center no-repeat;
         width: 14px;
         height: 100%;
         right: 15px;
