--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -100,6 +100,12 @@
     }
 }
 
+.imgWrap {
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
 .img {
     width: 100%;
     height: auto;
